# speechsyn

./: .gitignore  Audio Maker.ipynb  Makefile  README.md  Untitled.ipynb  pyproject.toml  upload_data.sh
MOS/sents/: ru.txt
speechsyn/: __init__.py  data_load.py  eval.py  hyperparams.py  modules.py  networks.py  prepro.py  speaker.py  synthesize.py  train.py  utils.py
speechsyn/MOS/sents/: ru.txt
speechsyn/tacotron/: data_load.py  hyperparams.py  speaker.py
tests/: test.py
