[tool.poetry]
name = "speechsyn"
version = "0.0.1"
description = "Speech Synthesizer"
authors = [
    "Oleg Sokolov <sokolegg@yandex.ru>"
]
readme = "README.md"
keywords = ["AI", 'NLP']

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

# Requirements
[tool.poetry.dependencies]
python = "^3.6"
tensorflow_gpu = "==1.14.0"
tqdm = ">=4.40.0"
librosa = ">=0.7.1 "
keras = ">=2.3.1"
numpy = ">=1.11.0"
matplotlib = ">=3.1.2"

[tool.poetry.scripts]
speechsyn = "speechsyn.synthesize:main"